<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boder_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/auto_start_per"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/des_auto_start"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <CheckBox
        android:id="@+id/cbPer"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:buttonTint="@color/main_text"
        android:text="@string/dont_ask_again"
        app:layout_constraintStart_toStartOf="@id/tvDes"
        app:layout_constraintTop_toBottomOf="@id/tvDes" />

    <TextView
        android:id="@+id/tvAllow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_18sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/allow"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/cbPer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cbPer" />

    <TextView
        android:id="@+id/tvDeny"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/deny"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tvAllow"
        app:layout_constraintEnd_toStartOf="@id/tvAllow"
        app:layout_constraintTop_toTopOf="@id/tvAllow" />
</androidx.constraintlayout.widget.ConstraintLayout>