<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_34sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/set_timer"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintStart_toEndOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/ivBack" />

    <TextView
        android:id="@+id/tv10S"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_10s"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/tv30S"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tv30S"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_30s"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tv10S"
        app:layout_constraintEnd_toStartOf="@id/tv1m"
        app:layout_constraintStart_toEndOf="@id/tv10S"
        app:layout_constraintTop_toTopOf="@id/tv10S" />

    <TextView
        android:id="@+id/tv1m"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_1m"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tv10S"
        app:layout_constraintEnd_toStartOf="@id/tv5m"
        app:layout_constraintStart_toEndOf="@id/tv30S"
        app:layout_constraintTop_toTopOf="@id/tv10S" />

    <TextView
        android:id="@+id/tv5m"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_5m"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tv10S"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv1m"
        app:layout_constraintTop_toTopOf="@id/tv10S" />

    <TextView
        android:id="@+id/tv15m"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_15m"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toStartOf="@id/tv30m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv10S" />

    <TextView
        android:id="@+id/tv30m"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/txt_30m"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tv15m"
        app:layout_constraintEnd_toStartOf="@id/tvNow"
        app:layout_constraintStart_toEndOf="@id/tv15m"
        app:layout_constraintTop_toTopOf="@id/tv15m" />

    <TextView
        android:id="@+id/tvNow"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/now"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/tv15m"
        app:layout_constraintEnd_toStartOf="@id/ivPickTime"
        app:layout_constraintStart_toEndOf="@id/tv30m"
        app:layout_constraintTop_toTopOf="@id/tv15m" />

    <ImageView
        android:id="@+id/ivPickTime"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:src="@drawable/ic_set_timer"
        app:layout_constraintBottom_toBottomOf="@id/tv15m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvNow"
        app:layout_constraintTop_toTopOf="@id/tv15m" />

    <TextView
        android:id="@+id/tvDone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintHeight_percent=".0625"
        app:layout_constraintTop_toBottomOf="@id/ivPickTime" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ctlPickTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_8sdp"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintTop_toBottomOf="@id/tvDone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_bg_timer">

            <ImageView
                android:id="@+id/ivOceTime"
                android:layout_width="@dimen/_55sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:src="@drawable/img_bg_oce"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/cancel"
                android:textColor="@color/main_text"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="@id/ivOceTime"
                app:layout_constraintEnd_toStartOf="@id/ivOceTime"
                app:layout_constraintTop_toTopOf="@id/ivOceTime" />

            <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                android:id="@+id/vPickTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintBottom_toTopOf="@id/ivOceTime"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/ctlTimer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_8sdp"
        app:layout_constraintHeight_percent=".08"
        app:layout_constraintTop_toBottomOf="@id/tvDone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_bg_timer_1">

            <TextView
                android:id="@+id/tvTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/main_text"
                android:textSize="@dimen/_18ssp" />

            <ImageView
                android:id="@+id/ivEditTimer"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_edit_timer" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>