<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boder_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/del_all"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/des_del"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/ivDel"
        android:layout_width="@dimen/_84sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/img_bg_del"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDes" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cancel"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/ivDel"
        app:layout_constraintEnd_toStartOf="@id/ivDel"
        app:layout_constraintTop_toTopOf="@id/ivDel" />

</androidx.constraintlayout.widget.ConstraintLayout>