<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boder_dialog">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/set_theme_name"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etdSave"
        android:background="@drawable/boder_bg_edt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:fontFamily="@font/roboto_regular"
        android:hint="@string/name"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:textColor="@color/black_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintHeight_percent=".28"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <ImageView
        android:id="@+id/ivOceSave"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:src="@drawable/img_bg_oce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etdSave" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cancel"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/ivOceSave"
        app:layout_constraintEnd_toStartOf="@id/ivOceSave"
        app:layout_constraintTop_toTopOf="@id/ivOceSave" />
</androidx.constraintlayout.widget.ConstraintLayout>