<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_155sdp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/app_name"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.remi.fakecall.prankfriend.colorphone.viewcustom.CustomBeatSplash
        android:id="@+id/beat"
        android:layout_width="@dimen/_198sdp"
        android:layout_height="@dimen/_198sdp"
        app:layout_constraintBottom_toBottomOf="@id/ivApp"
        app:layout_constraintEnd_toEndOf="@id/ivApp"
        app:layout_constraintStart_toStartOf="@id/ivApp"
        app:layout_constraintTop_toTopOf="@id/ivApp" />

    <ImageView
        android:id="@+id/ivApp"
        android:layout_width="@dimen/_98sdp"
        android:layout_height="@dimen/_98sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/ic_splash"
        app:layout_constraintEnd_toEndOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_12sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/loading"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/sbLoading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.remi.fakecall.prankfriend.colorphone.viewcustom.CustomLoadingSplash
        android:id="@+id/sbLoading"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@id/tvAds" />

    <TextView
        android:id="@+id/tvAds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_34sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/this_action_may_contain_ads"
        android:textColor="@color/main_text"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>