<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/name"
            android:paddingStart="@dimen/_34sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:textColor="@color/black_text"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@id/edtSearch"
            app:layout_constraintStart_toStartOf="@id/edtSearch"
            app:layout_constraintTop_toTopOf="@id/edtSearch" />

        <ImageView
            android:id="@+id/ivExitSearch"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:src="@drawable/ic_exit_search"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/ctlSearch" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctlPerContacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/rcvContacts">

        <TextView
            android:id="@+id/tvTitleContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/contacts"
            android:textColor="@color/black_text"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDesContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/des_contacts"
            android:textColor="#949494"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleContacts" />

        <TextView
            android:id="@+id/tvCheckPerContact"
            android:layout_width="@dimen/_134sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/allow_permission"
            android:textColor="@color/main_text"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/tvDesContacts"
            app:layout_constraintStart_toStartOf="@id/tvDesContacts"
            app:layout_constraintTop_toBottomOf="@id/tvDesContacts" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>